[gd_scene load_steps=4 format=3 uid="uid://cg000ebl3e3bd"]

[ext_resource type="Script" path="res://scene/game/tower/upgrade_indicator.gd" id="1_ruuos"]

[sub_resource type="Gradient" id="Gradient_jggbg"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_dm5m3"]
gradient = SubResource("Gradient_jggbg")
width = 4
height = 2

[node name="upgrade_indicator" type="Node2D"]
script = ExtResource("1_ruuos")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = -4.0
offset_top = -123.0
offset_right = 4.0
offset_bottom = 5.0
theme_override_constants/separation = 1
alignment = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_dm5m3")

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_dm5m3")

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_dm5m3")

[node name="TextureRect4" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_dm5m3")

[node name="TextureRect5" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_dm5m3")

[node name="TextureRect6" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_dm5m3")

[node name="TextureRect7" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_dm5m3")

[node name="TextureRect8" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_dm5m3")

[node name="TextureRect9" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_dm5m3")

[node name="TextureRect10" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_dm5m3")

[node name="TextureRect11" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_dm5m3")

[node name="TextureRect12" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_dm5m3")

[node name="TextureRect13" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_dm5m3")
